# nix.dev

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitpod.dockerfile  .gitpod.yml  .imgbotconfig  .readthedocs.yml  .travis.yml  .vale.ini  CONTRIBUTING.md  CONTRIBUTING.rst  LICENCE.md  LICENSE.md  Makefile  README.md  README.rst  _redirects  convert_shell_session_to_pexpect_test.py  default.nix  flake.nix  live  live.py  netlify.toml  overlay.nix  pagefind.yml  pyproject.toml  requirements.nix  requirements.txt  run_code_block_tests.sh  setup.py  shell-darwin.nix  shell.nix  spelling-exceptions.dic
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  (+11 more)
cla/: README.md  signatures.json
maintainers/: README.md  best-practices.md  collaboration.md  documentation-project-2023.md  documentation-survey.md  google-season-of-docs-2023.md  google-season-of-docs-2024.md  how-to-contribute-to-documentation.md  information-flow.md  responsibilities.md  technical-writers.md  vision.md
nix/: development-manual.json  inputs.nix  nix-versions.json  nixpkgs-versions.json  overlay.nix  releases.nix  sources.json  sources.nix  tex-env.nix  update-development-manual.nix  update-nix-releases.nix  update-nixpkgs-releases.nix
npins/: default.nix  sources.json
site/: README.md  astro.config.mjs  netlify.toml  package-lock.json  package.json
source/: conf.py  contributing.md  contributors.yaml  faq.md  faq.rst  glossary.md  glossary.rst  index.md  index.rst  influences.md  influences.rst  install-nix.md  nix-pills.rst  recommended-reading.md  recommended-reading.rst  robots.txt
working_groups/: learning_journey.md
(+223 files in other folders)
