[tool.poetry]
name = "nix.dev"
version = "0.1.0"
description = ""
authors = ["Domen Kožar <domen@dev.si>"]
license = "CC BY-SA"

[tool.poetry.dependencies]
python = "^3.8"

livereload = "*"
myst-parser = {version = "*", extras = ["linkify"]}
sphinx = "*"
sphinx-book-theme = "*"
sphinx-copybutton = "*"

# remove when all .rst files have been converted to .md
rst-to-myst = {version = "*", extras = ["sphinx"]}

[tool.poetry.dev-dependencies]
black = "==21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
