[tool.poetry]
name = "nix.dev"
version = "0.1.0"
description = ""
authors = ["Domen Kožar <domen@dev.si>"]
license = "CC BY-SA"

[tool.poetry.dependencies]
python = "^3.9"

livereload = "*"
myst-parser = {version = "*", extras = ["linkify"]}
sphinx = "*"
sphinx-book-theme = "^0.3.2"
sphinx-copybutton = "*"

[tool.poetry.dev-dependencies]
black = "==22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
