[tool.poetry]
name = "nix.dev"
version = "0.1.0"
description = ""
authors = ["Domen Kožar <domen@dev.si>"]
license = "CC BY-SA"

[tool.poetry.dependencies]
python = "^3.7"

livereload = "*"
myst-parser = {version = "*", extras = ["linkify"]}
sphinx = "*"
sphinx-book-theme = "^0.2.0"
sphinx-copybutton = "*"
sphinx-design = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "==22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
